# sgr-deep-research

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml.example  docker-compose.yml  example_report.md  pyproject.toml  requirements.txt  scraping.py  setup.cfg  sgr-deep-research.py  test.md
.cursor/rules/: python-fastapi.mdc
.github/workflows/: build.yml  linter.yml
services/: docker-compose.yml
services/api_service/: Dockerfile  requirements.txt
sgr-classic/: README.md  requirements.txt
sgr-streaming/: README.md  compact_streaming_example.py  demo_enhanced_streaming.py  enhanced_streaming.py  requirements.txt  sgr_step_tracker.py  sgr_streaming.py  sgr_visualizer.py
sgr_deep_research/: __init__.py  __main__.py  settings.py
sgr_deep_research/api/: __init__.py  endpoints.py  models.py
sgr_deep_research/core/: __init__.py  agent.py  llm_client.py  models.py  prompts.py  reasoning_schemas.py  stream.py  tools.py
sgr_deep_research/core/agents/: __init__.py  agent.py  base_agent.py  sgr_agent.py  sgr_auto_tools_agent.py  sgr_so_tools_agent.py  sgr_tools_agent.py  tools_agent.py
sgr_deep_research/core/llm/: __init__.py  base.py  factory.py  mistral_client.py  openai_client.py  schema_compiler.py  utils.py
sgr_deep_research/core/tools/: __init__.py  base.py  research.py
sgr_deep_research/prompts/: system_prompt.txt
sgr_deep_research/services/: __init__.py  tavily_search.py
src/: .dockerignore  Dockerfile  config.yaml.example  main.py  pyproject.toml  settings.py
src/api/: __init__.py  endpoints.py  models.py
src/core/: agent.py  models.py  prompts.py  reasoning_schemas.py  stream.py  tools.py
src/prompts/: system_prompt.txt  tool_function_prompt.txt
src/services/: __init__.py  tavily_search.py
tests/: test_api_models.py  test_mistral_client.py  test_schema_compiler.py
