[metadata]
name = sgr-deep-research
version = attr: sgr_deep_research.__version__
description = SGR Deep Research - Schema-Guided Reasoning for Deep Research
long_description = file: README.md
long_description_content_type = text/markdown
author = virrius, VaKovaLskii, abdullin, Pavel Zloi, Shadekss, mixaill76
license = MIT
license_files = LICENSE*
url = https://github.com/vakovalskii/sgr-deep-research
project_urls =
    Repository = https://github.com/vakovalskii/sgr-deep-research
    Issues = https://github.com/vakovalskii/sgr-deep-research/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords = ai, research, reasoning, schema-guided, openai

[options]
packages = find:
python_requires = >=3.10
zip_safe = False
include_package_data = True
install_requires =
    openai>=1.0.0
    pydantic>=2.0.0
    rich>=13.0.0
    httpx>=0.25.0
    socksio>=1.0.0
    tavily-python>=0.3.0
    trafilatura>=1.6.0
    youtube-transcript-api>=0.6.0
    PyYAML>=6.0
    envyaml>=1.10.0
    python-dateutil>=2.8.0
    pydantic-settings>=2.10.1
    fastapi>=0.116.1
    uvicorn>=0.35.0

[options.packages.find]
where = .
include = sgr_deep_research*

[options.package_data]
sgr_deep_research = **/*.yaml, **/*.yml, **/*.json, **/*.txt

[options.entry_points]
console_scripts =
    sgr = sgr_deep_research.main:main

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    isort>=5.12.0
    flake8>=6.0.0
    mypy>=1.0.0
tests =
    pytest>=7.0.0
    pytest-cov>=4.0.0
